Fixed the bug that prevents it from entering the database

--- a/index.html
+++ b/index.html
@@ -122,25 +122,25 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></span>
                             </div>
-                            <input type="text" id="linkedin" name="linkedin" class="form-control">
+                            <input type="text" id="linkedinHandle" name="linkedinHandle" class="form-control">
                         </div><br />
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text twitter"><i class="fa fa-twitter" aria-hidden="true"></i></span>
                             </div>
-                            <input type="text" id="twitter" name="twitter" class="form-control">
+                            <input type="text" id="twitterHandle" name="twitterHandle" class="form-control">
                         </div><br />
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text instagram"><i class="fa fa-instagram" aria-hidden="true"></i></span>
                             </div>
-                            <input type="text" id="instagram" name="instagram" class="form-control">
+                            <input type="text" id="instagramHandle" name="instagramHandle" class="form-control">
                         </div><br />
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text facebook"><i class="fa fa-facebook" aria-hidden="true"></i></span>
                             </div>
-                            <input type="text" id="facebook" name="facebook" class="form-control">
+                            <input type="text" id="facebookHandle" name="facebookHandle" class="form-control">
                         </div>
 
                     </div>
@@ -151,7 +151,7 @@
                         <div class="form-check form-check-stacked form-group">
                             <input type="radio" name="familiarHandles" id="linkedin" class="form-check-input" value="linkedin"
                                 >
-                            <label for="linkedin" class="form-check-label">linkedin</label>
+                            <label for="linkedin" class="form-check-label">Linkedin</label>
                         </div>
                         <div class="form-check form-check-stacked form-group">
                             <input type="radio" name="familiarHandles" id="twitter" class="form-check-input" value="twitter">
